--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ui5/webcomponents-react": "^0.6.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
