--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
